--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>FuckTrumpTuah - Community Takeover</title>
+    <title>Unvaxxed $SPRM</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <nav class="nav-container">
-            <div class="logo">$TrumpTuah CTO</div>
+            <div class="logo">Unvaxxed $SPRM</div>
             <div class="nav-links">
                 <a href="#about">About</a>
                 <a href="#story">Our Story</a>
@@ -38,31 +38,31 @@
                 <div class="particle"></div>
             </div>
             <div class="hero-content">
-                <h1>FuckTrumpTuah</h1>
-                <p class="subtitle">Community Takeover Initiative</p>
+                <h1>Unvaxxed $SPRM</h1>
+                <p class="subtitle">The world's most valuable asset</p>
                 <div class="cta-buttons">
-                    <a href="https://t.me/fuktrumptuah" class="cta-primary">Join Telegram</a>
+                    <a href="https://t.me/unvaxxedsprm" class="cta-primary">Join Telegram</a>
                     <a href="https://discord.gg/yuezhykWGB" class="cta-secondary">Join Discord</a>
                 </div>
             </div>
         </section>
 
         <section id="about" class="about">
-            <h2>About The Takeover</h2>
+            <h2>The Future of Humanity Depends on Us</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>The community has united to take control after the original team's betrayal. We're building something stronger, more transparent, and truly community-driven.</p>
+                    <p>Now only the pure unvaxxed $SPRM can save us! And we need you to protect it all the way to a $100M market cap, where our team of super scientist estimated with 100% certainty that humanity will be SAVED. So get your $SPRM and HODL</p>
                     <div class="about-social">
-                        <a href="https://t.me/fuktrumptuah" target="_blank" class="about-social-icon">
+                        <a href="https://t.me/unvaxxedsprm" target="_blank" class="about-social-icon">
                             <i class="fab fa-telegram"></i>
                         </a>
-                        <a href="https://x.com/fucktrumptuah" target="_blank" class="about-social-icon">
+                        <a href="https://x.com/unvaxxedsprm" target="_blank" class="about-social-icon">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="https://discord.gg/yuezhykWGB" target="_blank" class="about-social-icon">
+                        <a href="https://discord.gg/unvaxxedsprm" target="_blank" class="about-social-icon">
                             <i class="fab fa-discord"></i>
                         </a>
-                        <a href="https://www.instagram.com/trumptuahh" target="_blank" class="about-social-icon">
+                        <a href="https://www.instagram.com/unvaxxedsprm" target="_blank" class="about-social-icon">
                             <i class="fab fa-instagram"></i>
                         </a>
                     </div>
@@ -70,7 +70,7 @@
                 <div class="contract-info">
                     <h3>Contract Address</h3>
                     <div class="contract-address">
-                        <code>Y43ZbKvRSJ6mXagfZHmpBDxuVzBGDmWhErqeYeDpump</code>
+                        <code>The contract will be available upon launch on December 21st 2024 1pm EST</code>
                         <button class="copy-button" onclick="copyContract()">
                             <i class="fas fa-copy"></i>
                         </button>
