--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -42,7 +42,6 @@
                 <p class="subtitle">The world's most valuable asset</p>
                 <div class="cta-buttons">
                     <a href="https://t.me/unvaxxedsprm" class="cta-primary">Join Telegram</a>
-                    <a href="https://discord.gg/yuezhykWGB" class="cta-secondary">Join Discord</a>
                 </div>
             </div>
         </section>
@@ -58,9 +57,6 @@
                         </a>
                         <a href="https://x.com/unvaxxedsprm" target="_blank" class="about-social-icon">
                             <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="https://discord.gg/unvaxxedsprm" target="_blank" class="about-social-icon">
-                            <i class="fab fa-discord"></i>
                         </a>
                         <a href="https://www.instagram.com/unvaxxedsprm" target="_blank" class="about-social-icon">
                             <i class="fab fa-instagram"></i>
@@ -83,8 +79,8 @@
             <h2>Our Story</h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <h3>The Betrayal</h3>
-                    <p>Original team abandoned the project and betrayed the community's trust</p>
+                    <h3>The Cabal</h3>
+                    <p>We are here to end the corruption and gain back our purity!</p>
                 </div>
                 <div class="timeline-item">
                     <h3>Community Rising</h3>
@@ -121,15 +117,11 @@
         <section id="community" class="community">
             <h2>Join Our Community</h2>
             <div class="social-links">
-                <a href="https://x.com/fucktrumptuah" class="social-button twitter">
+                <a href="https://x.com/unvaxxedsprm" class="social-button twitter">
                     <i class="fab fa-twitter"></i> Twitter
                 </a>
-                <a href="https://t.me/fuktrumptuah" class="social-button telegram" target="_blank">
+                <a href="https://t.me/unvaxxedsprm" class="social-button telegram" target="_blank">
                     <i class="fab fa-telegram"></i> Telegram
-                </a>
-                <a href="https://discord.gg/yuezhykWGB" class="social-button discord">
-                    <i class="fab fa-discord"></i> Discord
-                </a>
                 <a href="https://www.instagram.com/trumptuahh" class="social-button instagram">
                     <i class="fab fa-instagram"></i> Instagram
                 </a>
@@ -139,7 +131,7 @@
 
     <footer>
         <div class="footer-content">
-            <p>&copy; 2024 TrumpTuah CTO. All rights reserved.</p>
+            <p>&copy; Unvaxxed $SPRM, All rights reserved.</p>
             <p class="disclaimer">This is a community-driven project. DYOR - Do Your Own Research.</p>
         </div>
     </footer>
