--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -47,10 +47,13 @@
         </section>
 
         <section id="about" class="about">
-            <h2>The Future of Humanity Depends on Us</h2>
+            <h2>Why $SPRM? Why Now? Why YOU?</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Now only the pure unvaxxed $SPRM can save us! And we need you to protect it all the way to a $100M market cap, where our team of super scientist estimated with 100% certainty that humanity will be SAVED. So get your $SPRM and HODL</p>
+                    <p>We are at a time when the corruption is at an all-time high, and so holders of $SPRM, the most precious asset of all, are here to save
+ the day and free humanity from this corrupted poison that has infiltrated our various industries. By holding $SPRM, you are making a statement for true health.
+ Even if you got the vax, in this community you will find healing.
+  </p>
                     <div class="about-social">
                         <a href="https://t.me/unvaxxedsprm" target="_blank" class="about-social-icon">
                             <i class="fab fa-telegram"></i>
