--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -51,8 +51,8 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>We are at a time when the corruption is at an all-time high, and so holders of $SPRM, the most precious asset of all, are here to save
- the day and free humanity from this corrupted poison that has infiltrated our various industries. By holding $SPRM, you are making a statement for true health.
- Even if you got the vax, in this community you will find healing.
+ the day and free humanity from this corrupted poison that has infiltrated our various industries. Even if you got the shot because you were lied to and coerced
+ by the media, now is a chance to show your stance with humanity and nature. Get your unvaxxed $SPRM now. In this community you will find healing!
   </p>
                     <div class="about-social">
                         <a href="https://t.me/unvaxxedsprm" target="_blank" class="about-social-icon">
@@ -79,19 +79,20 @@
         </section>
 
         <section id="story" class="story">
-            <h2>Our Story</h2>
+            <h2>Roadmap</h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <h3>The Cabal</h3>
-                    <p>We are here to end the corruption and gain back our purity!</p>
+                    <h3>Prelaunch</h3>
+                    <p>We are here. Building awareness, building momentum. Creating a detox protocool. Getting the Telegram with as many members as we can. Creating all sorts of memes.
+                         </p>
                 </div>
                 <div class="timeline-item">
-                    <h3>Community Rising</h3>
-                    <p>Holders united to take control and rebuild</p>
+                    <h3>Launch</h3>
+                    <p>December 21st 2024 1pm EST we do the Genesis Drop. Token creation is livestream, fair launch on pump.fun</p>
                 </div>
                 <div class="timeline-item">
                     <h3>The Future</h3>
-                    <p>Building a stronger, community-driven project</p>
+                    <p>Saving humanity by reaching a $100M market cap!</p>
                 </div>
             </div>
         </section>
@@ -101,18 +102,18 @@
             <div class="tokenomics-grid">
                 <div class="tokenomics-item">
                     <i class="fas fa-lock"></i>
-                    <h3>Security</h3>
-                    <p>Bonded and burned project</p>
+                    <h3>Protected</h3>
+                    <p>Fair Launch. Dev won't dump his load</p>
                 </div>
                 <div class="tokenomics-item">
                     <i class="fas fa-users"></i>
-                    <h3>Community</h3>
-                    <p>100% community owned</p>
+                    <h3>Purity</h3>
+                    <p>100% purity of Unvaxxed $SPRM guarenteed.</p>
                 </div>
                 <div class="tokenomics-item">
                     <i class="fas fa-chart-line"></i>
                     <h3>Growth</h3>
-                    <p>Sustainable tokenomics</p>
+                    <p>Everybody HODL their seeds, thus the seed bank grows continuously.</p>
                 </div>
             </div>
         </section>
