--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -47,13 +47,11 @@
         </section>
 
         <section id="about" class="about">
-            <h2>Why $SPRM? Why Now? Why YOU?</h2>
+            <h2>Are you ready to be Unvaxxed?</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>We are at a time when the corruption is at an all-time high, and so holders of $SPRM, the most precious asset of all, are here to save
- the day and free humanity from this corrupted poison that has infiltrated our various industries. Even if you got the shot because you were lied to and coerced
- by the media, now is a chance to show your stance with humanity and nature. Get your unvaxxed $SPRM now. In this community you will find healing!
-  </p>
+                    <p> Unvaxxed $SPRM is a groundbreaking meme token on the Solana blockchain, launching on December 21st, 2024, at 1 PM EST. And it's way more than that. It's a movement. It's a statement of purity. It's a statement of commitment to Truth. To Integrity. To Authenticity. By holding $SPRM, we can put an end to the whole concept of corruption. The whole market is filled with junk. It's leaking everywhere. Here, we bring back the gold standard.
+                      A meme so potent it can get your wallet pregnant. This is the power of $SPRM! </p>
                     <div class="about-social">
                         <a href="https://t.me/unvaxxedsprm" target="_blank" class="about-social-icon">
                             <i class="fab fa-telegram"></i>
@@ -78,25 +76,25 @@
             </div>
         </section>
 
-/* Here put a new section with these elements:
-H2 title: Our goal is to unvax people not simply speak to the unvaxxed
+        <section class="funny-section">
+            <h2>Our goal is to unvax people not simply speak to the unvaxxed</h2>
+            <p>We are here to provide humanity with the tools to unvax the countless people who were lied to, manipulated and coerced. This is about unvaxxing yourself, about detoxing your vessel so purity can emerge.</p>
+            <div class="capsules">
+                <p class="capsule alternate">"Unvaxxed $SPRM: first come, first served."</p>
+                <p class="capsule">"Unvaxxed $SPRM…a whole new way to make it rain"</p>
+                <img src="Main/UnvaxxedSPRM/Images/meme1.jpg" alt="Meme 1" class="meme">
+                <p class="capsule alternate">"Unvaxxed $SPRM = Be fertile, not futile"</p>
+                <p class="capsule">"Unvaxxed $SPRM: more HODL = more cuddle"</p>
+                <img src="Main/UnvaxxedSPRM/Images/meme2.jpg" alt="Meme 2" class="meme">
+            </div>
+        </section>
 
-Paragraph: We are here to provide humanity with the tools to unvax the countless people who were lied to, manipulated and coerced. This is about unvaxxing yourself, about detoxing your vessel so purity can emerge.
-
-Funny line 1
-
-Funny line 2
-
-MEME image or gif   */
-
-        
         <section id="story" class="story">
             <h2>Roadmap</h2>
             <div class="timeline">
                 <div class="timeline-item">
                     <h3>Prelaunch</h3>
-                    <p>We are here. Building awareness, building momentum. Creating a detox protocool. Getting the Telegram with as many members as we can. Creating all sorts of memes.
-                         </p>
+                    <p>We are here. Building awareness, building momentum. Creating a detox protocool. Getting the Telegram with as many members as we can. Creating all sorts of memes.</p>
                 </div>
                 <div class="timeline-item">
                     <h3>Launch</h3>
@@ -109,25 +107,16 @@ MEME image or gif   */
             </div>
         </section>
 
-
-/* Here put a new section with these elements:
-
-Image
-
-H2 title: Who said we can't have fun while saving the world? 
-
-Paragraph: Here you will find the perfect blend of comedic impulses and a genuine mission to rally people. 
-This together makes Unvaxxed $SPRM the token with the best potential of penetrating the market.  Make sure you hodl on to your seed so you don't miss out! 
-
-Funny line 1
-
-Funny line 2
-
-MEME image or gif   
-
-*/
-
-
+        <section class="funny-section">
+            <img src="Main/UnvaxxedSPRM/Images/meme3.jpg" alt="Meme 3" class="meme">
+            <h2>Who said we can't have fun while saving the world?</h2>
+            <p>Here you will find the perfect blend of comedic impulses and a genuine mission to rally people. These elements together make Unvaxxed $SPRM the token with the best potential of penetrating the SOL market. Make sure you hodl on to your seed so you don't pull out too early! </p>
+            <div class="capsules">
+                <p class="capsule alternate">"Unvaxxed $SPRM: Best liquidity in the market"</p>
+                <p class="capsule">"76% of men holding Unvaxxed $SPRM report stronger erections"</p>
+                <img src="Main/UnvaxxedSPRM/Images/meme4.jpg" alt="Meme 4" class="meme">
+            </div>
+        </section>
 
         
         <section id="tokenomics" class="tokenomics">
