--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -141,51 +141,70 @@
                 </div>
             </div>
         </section>
+<section class="funny-section">
+    <img src="Main/UnvaxxedSPRM/Images/meme3.jpg" alt="Meme 3" class="meme">
+    <h2>Who said we can't have fun while saving the world?</h2>
+    <p>Here you will find the perfect blend of comedic impulses and a genuine mission to rally people. These elements together make Unvaxxed $SPRM the token with the best potential of penetrating the SOL market. Make sure you hodl on to your seed so you don't pull out too early! </p>
+    <div class="capsules">
+        <p class="capsule alternate">"Unvaxxed $SPRM: Best liquidity in the market"</p>
+        <p class="capsule">"76% of men holding Unvaxxed $SPRM report stronger erections"</p>
+        <img src="Main/UnvaxxedSPRM/Images/meme4.jpg" alt="Meme 4" class="meme">
+    </div>
+</section>
 
-        <!-- Launch Incentives Section -->
-        <section>
-            <h2>Launch Incentives</h2>
-            <div class="timeline">
-                <div class="timeline-item">
-                    <h3>No SPILL HODLER event</h3>
-                    <p>5 million $SPRM tokens will be awarded amongst all the people who HODL their precious seed for 30 full days, starting on the Genesis Drop. Do not leak your $SPRM for 30 days!</p>
-                </div>
-                <div class="timeline-item">
-                    <h3>Giveaway Wallet</h3>
-                    <p>15 Million tokens are locked until the market cap reaches $100M. These tokens will fund a health-related project voted by the community starting at $5M market cap.</p>
-                </div>
-                <div class="timeline-item">
-                    <h3>Community Challenges</h3>
-                    <p>Throughout the first 30 days of launch, challenges, activities, and events will reward participants in $SPRM and $SOL.</p>
-                </div>
-                <div class="timeline-item">
-                    <h3>Most Active Community Member</h3>
-                    <p>1 million tokens will be awarded to the most active community member, voted by the community, 30 days post-launch. Spread memes and make noise!</p>
-                </div>
-            </div>
-        </section>
+<section id="launch-incentives" class="launch-incentives">
+    <h2>Launch Incentives</h2>
+    <div class="timeline">
+        <div class="timeline-item">
+            <h3>#1: No SPILL HODLER event</h3>
+            <p>5 million $SPRM tokens will be awarded amongst all the people who HODL their precious seed for 30 full days, starting on the Genesis Drop. To qualify it is pretty simple: Do not leak your $SPRM for 30 days. Aka... DON'T SELL. Those who fulfill this challenge will be extremely happy in all possible ways.</p>
+        </div>
+        <div class="timeline-item">
+            <h3>#2: Giveaway Wallet</h3>
+            <p>We also have a special allocation in the Giveaway wallet. 15 Million tokens are locked until the market cap reaches $100M, in which case these tokens will be used to finance a health-related project in its entirety. The community will begin voting on what this project is upon reaching $5M market cap.</p>
+        </div>
+        <div class="timeline-item">
+            <h3>#3: Challenges and Events</h3>
+            <p>All throughout the first 30 days of launch, challenges, activities, events, etc. will be played and give rewards in $SPRM and $SOL.</p>
+        </div>
+        <div class="timeline-item">
+            <h3>#4: Community Engagement</h3>
+            <p>30 days in, 1 million tokens will be awarded to the most active community member, voted by the community. So spread these memes, do some noise, and let's take $SPRM to the egg!</p>
+        </div>
+    </div>
+    <div class="capsules">
+        <p class="capsule alternate">"Unvaxxed $SPRM swims harder than Lia Thomas"</p>
+        <img src="Main/UnvaxxedSPRM/Images/meme5.jpg" alt="Meme 5" class="meme">
+        <p class="capsule">"Research shows that men aged 45-55 who hold Unvaxxed $SPRM report no longer needing Viagra"</p>
+    </div>
+</section>
 
-        <!-- How to Buy Section -->
-        <section>
-            <h2>How to Buy</h2>
-            <ol>
-                <li>Download Phantom Wallet: This is your $SPRM's home. Think of it as the ultimate fertility bank.</li>
-                <li>Save Your Recovery Phrase: Protect your seed of sovereignty at all costs.</li>
-                <li>Load up on Solana: No SOL, no $SPRM.</li>
-                <li>Connect to the pump.fun link during Genesis Drop and purchase $SPRM.</li>
-                <li>HODL: Don't spill your seed by selling too soon. Saving humanity depends on it!</li>
-                <li>Optional: Use Bullx trading bot for a seamless experience.</li>
-            </ol>
-            <a href="https://phantom.com/download" class="cta-secondary">Get Phantom</a>
-            <a href="https://t.me/BullxBetaBot" class="cta-secondary">Get Bullx</a>
-        </section>
+<section id="how-to-buy" class="how-to-buy">
+    <h2>How to Buy</h2>
+    <ol>
+        <li>Download Phantom Wallet: This is where your $SPRM lives. Think of it as the ultimate fertility bank, but digital. 🏦</li>
+        <li>Save your recovery phrase: Seriously, don’t lose it, share it, or let it fall into the wrong hands. This is your seed of sovereignty. PROTECT IT AT ALL COSTS. 🛡</li>
+        <li>Load up on Solana: No Sol? No $SPRM. Send some from another exchange or buy directly in the app. 💸</li>
+        <li>When the Genesis Drop begins, connect your wallet to the pump.fun link shared in the livestream, Telegram, and X.</li>
+        <li>Use your SOL to buy how many $SPRM you want, then click BUY. Welcome to the club of vitality holders. 🚀 The more you have, the more epic you are. This is a simple fact.</li>
+        <li>HODL: Don’t spill your seed by selling too soon. HODLing is how we save humanity! We aim for $100M Market cap in order to have certainty that the genetic lineage of humanity will be forever protected.</li>
+    </ol>
+  <a href="https://phantom.com/download" class="button">Get Phantom</a>
+    <a href="https://t.me/BullxBetaBot?start=access_6TD0R5G5EMC:same" class="button">Get Bullx</a>
+    <div class="capsules">
+        <p class="capsule alternate">"Get banked… $SPRM Banked."</p>
+        <img src="Main/UnvaxxedSPRM/Images/meme6.jpg" alt="Meme 6" class="meme">
+        <p class="capsule">"Unvaxxed $SPRM is the world’s most valuable asset…trust the $cience."</p>
+    </div>
+    
+</section>
 
-        <!-- Detox Protocol Section -->
-        <section>
-            <h2>Detox Protocol</h2>
-            <p>The first step is to HOLD $SPRM. By holding $SPRM, you receive quantum healing frequencies activated upon token creation. Like a subscription to a permanent energetic hospital, $SPRM ensures purification.</p>
-            <p>Next steps will be announced as we gather data on the best detox protocols. Suggestions? Leave them in Telegram!</p>
-        </section>
+<section id="detox-protocol" class="detox-protocol">
+    <h2>Detox Protocol</h2>
+    <p>The first step is to HOLD $SPRM. Simply by hodling $SPRM, you are receiving the quantum healing frequencies that were activated upon the token creation to purify all the holders from vax-related toxins. Like a subscription to a permanent energetic hospital. This is why our $SPRM will always win the race.</p>
+    <p>Next step is TBD as we accumulate data on the best protocols out there. Have a suggestion? Make sure to leave it in the Telegram!</p>
+    <img src="Main/UnvaxxedSPRM/Images/meme7.jpg" alt="Meme 7" class="meme">
+</section>
 
         <!-- Community Section -->
         <section id="community" class="community">
