--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -85,7 +85,7 @@
                 <img src="Main/UnvaxxedSPRM/Images/meme1.jpg" alt="Meme 1" class="meme">
                 <p class="capsule alternate">"Unvaxxed $SPRM = Be fertile, not futile"</p>
                 <p class="capsule">"Unvaxxed $SPRM: more HODL = more cuddle"</p>
-                <img src="Main/UnvaxxedSPRM/Images/meme2.jpg" alt="Meme 2" class="meme">
+                <img src="Main/UnvaxxedSPRM/Images/meme2.png" alt="Meme 2" class="meme">
             </div>
         </section>
 
@@ -108,13 +108,13 @@
         </section>
 
         <section class="funny-section">
-            <img src="Main/UnvaxxedSPRM/Images/meme3.jpg" alt="Meme 3" class="meme">
+            <img src="Main/UnvaxxedSPRM/Images/meme3.png" alt="Meme 3" class="meme">
             <h2>Who said we can't have fun while saving the world?</h2>
             <p>Here you will find the perfect blend of comedic impulses and a genuine mission to rally people. These elements together make Unvaxxed $SPRM the token with the best potential of penetrating the SOL market. Make sure you hodl on to your seed so you don't pull out too early! </p>
             <div class="capsules">
                 <p class="capsule alternate">"Unvaxxed $SPRM: Best liquidity in the market"</p>
                 <p class="capsule">"76% of men holding Unvaxxed $SPRM report stronger erections"</p>
-                <img src="Main/UnvaxxedSPRM/Images/meme4.jpg" alt="Meme 4" class="meme">
+                <img src="Main/UnvaxxedSPRM/Images/meme4.png" alt="Meme 4" class="meme">
             </div>
         </section>
 
@@ -148,7 +148,7 @@
     <div class="capsules">
         <p class="capsule alternate">"Unvaxxed $SPRM: Best liquidity in the market"</p>
         <p class="capsule">"76% of men holding Unvaxxed $SPRM report stronger erections"</p>
-        <img src="Main/UnvaxxedSPRM/Images/meme4.jpg" alt="Meme 4" class="meme">
+        <img src="Main/UnvaxxedSPRM/Images/meme5.webp" alt="Meme 5" class="meme">
     </div>
 </section>
 
@@ -174,7 +174,7 @@
     </div>
     <div class="capsules">
         <p class="capsule alternate">"Unvaxxed $SPRM swims harder than Lia Thomas"</p>
-        <img src="Main/UnvaxxedSPRM/Images/meme5.jpg" alt="Meme 5" class="meme">
+        <img src="Main/UnvaxxedSPRM/Images/meme6.jpg" alt="Meme 6" class="meme">
         <p class="capsule">"Research shows that men aged 45-55 who hold Unvaxxed $SPRM report no longer needing Viagra"</p>
     </div>
 </section>
@@ -203,7 +203,7 @@
     <h2>Detox Protocol</h2>
     <p>The first step is to HOLD $SPRM. Simply by hodling $SPRM, you are receiving the quantum healing frequencies that were activated upon the token creation to purify all the holders from vax-related toxins. Like a subscription to a permanent energetic hospital. This is why our $SPRM will always win the race.</p>
     <p>Next step is TBD as we accumulate data on the best protocols out there. Have a suggestion? Make sure to leave it in the Telegram!</p>
-    <img src="Main/UnvaxxedSPRM/Images/meme7.jpg" alt="Meme 7" class="meme">
+    <img src="Main/UnvaxxedSPRM/Images/meme7.webp" alt="Meme 7" class="meme">
 </section>
 
         <!-- Community Section -->
