--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -193,7 +193,7 @@
     <a href="https://t.me/BullxBetaBot?start=access_6TD0R5G5EMC:same" class="button">Get Bullx</a>
     <div class="capsules">
         <p class="capsule alternate">"Get banked… $SPRM Banked."</p>
-        <img src="Main/UnvaxxedSPRM/Images/meme6.jpg" alt="Meme 6" class="meme">
+        <img src="Main/UnvaxxedSPRM/Images/meme7.jpg" alt="Meme 7" class="meme">
         <p class="capsule">"Unvaxxed $SPRM is the world’s most valuable asset…trust the $cience."</p>
     </div>
     
@@ -203,7 +203,7 @@
     <h2>Detox Protocol</h2>
     <p>The first step is to HOLD $SPRM. Simply by hodling $SPRM, you are receiving the quantum healing frequencies that were activated upon the token creation to purify all the holders from vax-related toxins. Like a subscription to a permanent energetic hospital. This is why our $SPRM will always win the race.</p>
     <p>Next step is TBD as we accumulate data on the best protocols out there. Have a suggestion? Make sure to leave it in the Telegram!</p>
-    <img src="Main/UnvaxxedSPRM/Images/meme7.webp" alt="Meme 7" class="meme">
+    <img src="Main/UnvaxxedSPRM/Images/hero.bg.jpg" alt="Meme 7" class="meme">
 </section>
 
         <!-- Community Section -->
