--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -82,7 +82,7 @@
             <div class="capsules">
                 <p class="capsule alternate">"Unvaxxed $SPRM: first come, first served."</p>
                 <p class="capsule">"Unvaxxed $SPRM…a whole new way to make it rain"</p>
-                <img src="Main/UnvaxxedSPRM/Images/meme1.jpg" alt="Meme 1" class="meme">
+                <img src="./Main/UnvaxxedSPRM/Images/meme1.jpg" alt="Meme 1" class="meme">
                 <p class="capsule alternate">"Unvaxxed $SPRM = Be fertile, not futile"</p>
                 <p class="capsule">"Unvaxxed $SPRM: more HODL = more cuddle"</p>
                 <img src="Main/UnvaxxedSPRM/Images/meme2.png" alt="Meme 2" class="meme">
