--- a/Main/UnvaxxedSPRM/index.html
+++ b/Main/UnvaxxedSPRM/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -83,10 +82,10 @@
             <div class="capsules">
                 <p class="capsule alternate">"Unvaxxed $SPRM: first come, first served."</p>
                 <p class="capsule">"Unvaxxed $SPRM…a whole new way to make it rain"</p>
-                <img src="unvaxxedsprm/Main/UnvaxxedSPRM/Images/meme1.jpg" alt="Meme 1" class="meme">
+                <img src="./Main/UnvaxxedSPRM/Images/meme1.jpg" alt="Meme 1" class="meme">
                 <p class="capsule alternate">"Unvaxxed $SPRM = Be fertile, not futile"</p>
                 <p class="capsule">"Unvaxxed $SPRM: more HODL = more cuddle"</p>
-                <img src="unvaxxedsprm/Main/UnvaxxedSPRM/Images/meme2.jpg" alt="Meme 2" class="meme">
+                <img src="Main/UnvaxxedSPRM/Images/meme2.png" alt="Meme 2" class="meme">
             </div>
         </section>
 
@@ -109,25 +108,121 @@
         </section>
 
         <section class="funny-section">
-            <img src="unvaxxedsprm/Main/UnvaxxedSPRM/Images/meme3.jpg" alt="Meme 3" class="meme">
+            <img src="Main/UnvaxxedSPRM/Images/meme3.png" alt="Meme 3" class="meme">
             <h2>Who said we can't have fun while saving the world?</h2>
             <p>Here you will find the perfect blend of comedic impulses and a genuine mission to rally people. These elements together make Unvaxxed $SPRM the token with the best potential of penetrating the SOL market. Make sure you hodl on to your seed so you don't pull out too early! </p>
             <div class="capsules">
                 <p class="capsule alternate">"Unvaxxed $SPRM: Best liquidity in the market"</p>
                 <p class="capsule">"76% of men holding Unvaxxed $SPRM report stronger erections"</p>
-                <img src="unvaxxedsprm/Main/UnvaxxedSPRM/Images/meme4.jpg" alt="Meme 4" class="meme">
+                <img src="Main/UnvaxxedSPRM/Images/meme4.png" alt="Meme 4" class="meme">
             </div>
         </section>
 
+        
+
+        <!-- Tokenomics Section -->
+        <section id="tokenomics" class="tokenomics">
+            <h2>Tokenomics</h2>
+            <div class="tokenomics-grid">
+                <div class="tokenomics-item">
+                    <i class="fas fa-lock"></i>
+                    <h3>Protected</h3>
+                    <p>Fair Launch. Dev won't dump his load on you. This is because we actually believe in our project and our cause, unlike 99.99% shit coins launched on pump.fun everyday.</p>
+                </div>
+                <div class="tokenomics-item">
+                    <i class="fas fa-users"></i>
+                    <h3>Wallet Distribution of Team Wallets</h3>
+                    <p>Initial buy amount: 8 SOL divided in 4 wallets. Dev 1, Dev 2, Marketing, Giveaways.</p>
+                </div>
+                <div class="tokenomics-item">
+                    <i class="fas fa-chart-line"></i>
+                    <h3>Growth Tactics</h3>
+                    <p>Everybody HODL their seeds, thus the seed bank grows continuously. We have many incentives and challenges to reward those who help us grow.</p>
+                </div>
+            </div>
+        </section>
+<section class="funny-section">
+    <img src="Main/UnvaxxedSPRM/Images/meme3.jpg" alt="Meme 3" class="meme">
+    <h2>Who said we can't have fun while saving the world?</h2>
+    <p>Here you will find the perfect blend of comedic impulses and a genuine mission to rally people. These elements together make Unvaxxed $SPRM the token with the best potential of penetrating the SOL market. Make sure you hodl on to your seed so you don't pull out too early! </p>
+    <div class="capsules">
+        <p class="capsule alternate">"Unvaxxed $SPRM: Best liquidity in the market"</p>
+        <p class="capsule">"76% of men holding Unvaxxed $SPRM report stronger erections"</p>
+        <img src="Main/UnvaxxedSPRM/Images/meme5.webp" alt="Meme 5" class="meme">
+    </div>
+</section>
+
+<section id="launch-incentives" class="launch-incentives">
+    <h2>Launch Incentives</h2>
+    <div class="timeline">
+        <div class="timeline-item">
+            <h3>#1: No SPILL HODLER event</h3>
+            <p>5 million $SPRM tokens will be awarded amongst all the people who HODL their precious seed for 30 full days, starting on the Genesis Drop. To qualify it is pretty simple: Do not leak your $SPRM for 30 days. Aka... DON'T SELL. Those who fulfill this challenge will be extremely happy in all possible ways.</p>
+        </div>
+        <div class="timeline-item">
+            <h3>#2: Giveaway Wallet</h3>
+            <p>We also have a special allocation in the Giveaway wallet. 15 Million tokens are locked until the market cap reaches $100M, in which case these tokens will be used to finance a health-related project in its entirety. The community will begin voting on what this project is upon reaching $5M market cap.</p>
+        </div>
+        <div class="timeline-item">
+            <h3>#3: Challenges and Events</h3>
+            <p>All throughout the first 30 days of launch, challenges, activities, events, etc. will be played and give rewards in $SPRM and $SOL.</p>
+        </div>
+        <div class="timeline-item">
+            <h3>#4: Community Engagement</h3>
+            <p>30 days in, 1 million tokens will be awarded to the most active community member, voted by the community. So spread these memes, do some noise, and let's take $SPRM to the egg!</p>
+        </div>
+    </div>
+    <div class="capsules">
+        <p class="capsule alternate">"Unvaxxed $SPRM swims harder than Lia Thomas"</p>
+        <img src="Main/UnvaxxedSPRM/Images/meme6.jpg" alt="Meme 6" class="meme">
+        <p class="capsule">"Research shows that men aged 45-55 who hold Unvaxxed $SPRM report no longer needing Viagra"</p>
+    </div>
+</section>
+
+<section id="how-to-buy" class="how-to-buy">
+    <h2>How to Buy</h2>
+    <ol>
+        <li>Download Phantom Wallet: This is where your $SPRM lives. Think of it as the ultimate fertility bank, but digital. 🏦</li>
+        <li>Save your recovery phrase: Seriously, don’t lose it, share it, or let it fall into the wrong hands. This is your seed of sovereignty. PROTECT IT AT ALL COSTS. 🛡</li>
+        <li>Load up on Solana: No Sol? No $SPRM. Send some from another exchange or buy directly in the app. 💸</li>
+        <li>When the Genesis Drop begins, connect your wallet to the pump.fun link shared in the livestream, Telegram, and X.</li>
+        <li>Use your SOL to buy how many $SPRM you want, then click BUY. Welcome to the club of vitality holders. 🚀 The more you have, the more epic you are. This is a simple fact.</li>
+        <li>HODL: Don’t spill your seed by selling too soon. HODLing is how we save humanity! We aim for $100M Market cap in order to have certainty that the genetic lineage of humanity will be forever protected.</li>
+    </ol>
+  <a href="https://phantom.com/download" class="button">Get Phantom</a>
+    <a href="https://t.me/BullxBetaBot?start=access_6TD0R5G5EMC:same" class="button">Get Bullx</a>
+    <div class="capsules">
+        <p class="capsule alternate">"Get banked… $SPRM Banked."</p>
+        <img src="Main/UnvaxxedSPRM/Images/meme7.jpg" alt="Meme 7" class="meme">
+        <p class="capsule">"Unvaxxed $SPRM is the world’s most valuable asset…trust the $cience."</p>
+    </div>
+    
+</section>
+
+<section id="detox-protocol" class="detox-protocol">
+    <h2>Detox Protocol</h2>
+    <p>The first step is to HOLD $SPRM. Simply by hodling $SPRM, you are receiving the quantum healing frequencies that were activated upon the token creation to purify all the holders from vax-related toxins. Like a subscription to a permanent energetic hospital. This is why our $SPRM will always win the race.</p>
+    <p>Next step is TBD as we accumulate data on the best protocols out there. Have a suggestion? Make sure to leave it in the Telegram!</p>
+    <img src="Main/UnvaxxedSPRM/Images/hero.bg.jpg" alt="Meme 7" class="meme">
+</section>
+
+        <!-- Community Section -->
+        <section id="community" class="community">
+            <h2>Join Our Community</h2>
+            <div class="social-links">
+                <a href="https://x.com/unvaxxedsprm" class="social-button twitter"><i class="fab fa-twitter"></i> Twitter</a>
+                <a href="https://t.me/unvaxxedsprm" class="social-button telegram" target="_blank"><i class="fab fa-telegram"></i> Telegram</a>
+                <a href="https://www.instagram.com/unvaxxedsprm" class="social-button instagram"><i class="fab fa-instagram"></i> Instagram</a>
+            </div>
+        </section>
     </main>
 
     <footer>
         <div class="footer-content">
             <p>&copy; Unvaxxed $SPRM, All rights reserved.</p>
-            <p class="disclaimer">None of this is financial advice. Nor is it health advice. It is all for ENTERTAINMENT PURPOSES ONLY. </p>
+            <p class="disclaimer">None of this is financial or health advice. All content is for ENTERTAINMENT PURPOSES ONLY.</p>
         </div>
     </footer>
-
     <script src="script.js"></script>
 </body>
 </html>
